--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bhagavad Gita Verse Finder</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
+<body>
   <div class="container">
     <h1>Bhagavad Gita Verse Finder</h1>
     <form id="search-form">
